--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div onclick="setOperator('-')" class="ui button">-</div>
             <div onclick="setOperator('*')" class="ui button">x</div>
             <div onclick="setOperator('/')" class="ui button">/</div>
+            <div onclick="opposite('+/-')" class="ui button">+/-</div>
             <div onclick="equal()" class="ui button">=</div>
             <div onclick="ce()" class="ui button">CE</div>
             <div onclick="c()" class="ui button">C</div>
@@ -63,6 +64,7 @@
       </div>
     </div>
 
+    <script src="variables.js"></script>
     <script src="logic.js"></script>
   </body>
 </html>
