--- a/index.html
+++ b/index.html
@@ -33,32 +33,43 @@
           </div>
         </section>
         <section>
-          <span id="history"></span><span id="operator"></span>
-          <div id="display" class="ui segment">0</div>
-        </section>
-        <section>
-          <div class="inputsContainer">
-            <div onclick="setValue('1')" class="ui button">1</div>
-            <div onclick="setValue('2')" class="ui button">2</div>
-            <div onclick="setValue('3')" class="ui button">3</div>
-            <div onclick="setValue('4')" class="ui button">4</div>
-            <div onclick="setValue('5')" class="ui button">5</div>
-            <div onclick="setValue('6')" class="ui button">6</div>
-            <div onclick="setValue('7')" class="ui button">7</div>
-            <div onclick="setValue('8')" class="ui button">8</div>
-            <div onclick="setValue('9')" class="ui button">9</div>
-            <div onclick="setValue('0')" class="ui button">0</div>
-            <div onclick="setValue('.')" class="ui button">.</div>
-          </div>
-          <div class="btnContainer">
-            <div onclick="setOperator('+')" class="ui button">+</div>
-            <div onclick="setOperator('-')" class="ui button">-</div>
-            <div onclick="setOperator('*')" class="ui button">x</div>
-            <div onclick="setOperator('/')" class="ui button">/</div>
-            <div onclick="opposite('+/-')" class="ui button">+/-</div>
-            <div onclick="equal()" class="ui button">=</div>
-            <div onclick="ce()" class="ui button">CE</div>
-            <div onclick="c()" class="ui button">C</div>
+          <div class="ui raised segments ">
+            <div class="calcContainer">
+              <div class="display">
+                <span id="history"></span><span id="operator"></span>
+                <div id="display" class="ui segment">0</div>
+              </div>
+
+              <div class="four ui buttons">
+                <div onclick="opposite('+/-')" class="ui button">+/-</div>
+                <div onclick="ce()" class="ui button">CE</div>
+                <div onclick="c()" class="ui button">C</div>
+              </div>
+              <div>
+                <div onclick="setValue('7')" class="ui button">7</div>
+                <div onclick="setValue('8')" class="ui button">8</div>
+                <div onclick="setValue('9')" class="ui button">9</div>
+                <div onclick="setOperator('/')" class="ui button">/</div>
+              </div>
+              <div>
+                <div onclick="setValue('4')" class="ui button">4</div>
+                <div onclick="setValue('5')" class="ui button">5</div>
+                <div onclick="setValue('6')" class="ui button">6</div>
+                <div onclick="setOperator('*')" class="ui button">x</div>
+              </div>
+              <div>
+                <div onclick="setValue('1')" class="ui button">1</div>
+                <div onclick="setValue('2')" class="ui button">2</div>
+                <div onclick="setValue('3')" class="ui button">3</div>
+                <div onclick="setOperator('-')" class="ui button">-</div>
+              </div>
+              <div>
+                <div onclick="setValue('.')" class="ui button">.</div>
+                <div onclick="setValue('0')" class="ui button">0</div>
+                <div onclick="equal()" class="ui button">=</div>
+                <div onclick="setOperator('+')" class="ui button">+</div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
