--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
             <div onclick="c()" class="ui huge grey button">C</div>
             <div onclick="ce()" class="ui huge grey button">CE</div>
-            <div onclick="setOperator('/')" class="ui huge grey button">
-              /
+            <div onclick="setOperator('÷')" class="ui huge grey button">
+              ÷
             </div>
           </div>
           <div class="row">
