--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="themes/prism.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+    <link href="themes/prism.css" rel="stylesheet" />
     <script src="themes/prism.js"></script>
     <title>Matthew's Blog</title>
   </head>
@@ -19,9 +19,9 @@
     <div class="ui container">
       <nav>
         <ul>
-          <li><a href="Calc/calc.html">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li>Articles</li>
-          <li>Projects</li>
+          <li><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
       <div>
