--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,800|Shanti|Work+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="themes/semantic.min.css"
       rel="stylesheet"
@@ -24,6 +28,15 @@
           <li><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
+      <div>
+        Div font
+        <h1>H1 font</h1>
+        <h2>H2 font</h2>
+        <h3>H3 font</h3>
+        <h4>H4 font</h4>
+        <h5>H5 font</h5>
+        <h6>H6 font</h6>
+      </div>
       <div>
         <pre>
             <code class="language-javascript">for(var i = 0; i < 10; i++){
