--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans:400,800|Shanti|Work+Sans:400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="themes/semantic.min.css"
       rel="stylesheet"
@@ -27,15 +31,17 @@
       </nav>
       <hr />
       <section>
-        <h1>
-          My Calculator
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
-          dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
-          repellendus recusandae mollitia unde omnis atque doloremque nesciunt
-          officia consequuntur fuga sequi.
-        </p>
+        <a href="Calc/calc.html">
+          <h1>
+            My Calculator
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+            modi, dolore eum ducimus repellat voluptatibus, dolor exercitationem
+            culpa repellendus recusandae mollitia unde omnis atque doloremque
+            nesciunt officia consequuntur fuga sequi.
+          </p>
+        </a>
       </section>
       <section>
         <h1>
