added css for nav

--- a/index.html
+++ b/index.html
@@ -20,14 +20,21 @@
     <title>Matthew's Blog</title>
   </head>
   <body>
+    <div class="ui raised segment">
+      <div class="ui container">
+        <nav>
+          <div class="navLogo">matt's<span class="navLogoSpan">Blog</span></div>
+          <div class="navLinks">
+            <ul>
+              <li><a href="index.html">home</a></li>
+              <li>sprints</li>
+              <li><a href="projects.html">projects</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
     <div class="ui container">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li>Articles</li>
-          <li><a href="projects.html">Projects</a></li>
-        </ul>
-      </nav>
       <div>
         Div font
         <h1>H1 font</h1>
