--- a/projects.html
+++ b/projects.html
@@ -18,18 +18,21 @@
     <title>Projects</title>
   </head>
   <body>
+    <div class="ui raised segment">
+      <div class="ui container">
+        <nav>
+          <div class="navLogo">matt's<span class="navLogoSpan">Blog</span></div>
+          <div class="navLinks">
+            <ul>
+              <li><a href="index.html">home</a></li>
+              <li>sprints</li>
+              <li><a href="projects.html">projects</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
     <div class="ui container">
-      <nav>
-        <div class="navLogo">Matthew's Blog</div>
-        <div class="navLinks">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>Articles</li>
-            <li><a href="projects.html">Projects</a></li>
-          </ul>
-        </div>
-      </nav>
-      <hr />
       <section>
         <a href="Calc/calc.html">
           <h1>
