--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -30,39 +30,44 @@
             </div>
             <div onclick="c()" class="ui huge grey button">C</div>
             <div onclick="ce()" class="ui huge grey button">CE</div>
-            <div onclick="setOperator('÷')" class="ui huge grey button">
-              ÷
-            </div>
+            <a href="../index.html">
+              <div class="ui huge red button">
+                OFF
+              </div>
+            </a>
           </div>
           <div class="row">
             <div onclick="setValue('7')" class="ui huge button">7</div>
             <div onclick="setValue('8')" class="ui huge button">8</div>
             <div onclick="setValue('9')" class="ui huge button">9</div>
-            <div onclick="setOperator('*')" class="ui huge grey button">
-              x
+            <div onclick="setOperator('÷')" class="ui huge grey button">
+              ÷
             </div>
           </div>
           <div class="row">
             <div onclick="setValue('4')" class="ui huge button">4</div>
             <div onclick="setValue('5')" class="ui huge button">5</div>
             <div onclick="setValue('6')" class="ui huge button">6</div>
-            <div onclick="setOperator('-')" class="ui huge grey button">
-              -
+            <div onclick="setOperator('*')" class="ui huge grey button">
+              x
             </div>
           </div>
           <div class="row">
             <div onclick="setValue('1')" class="ui huge button">1</div>
             <div onclick="setValue('2')" class="ui huge button">2</div>
             <div onclick="setValue('3')" class="ui huge button">3</div>
-            <div onclick="setOperator('+')" class="ui huge grey button">
-              +
+            <div onclick="setOperator('-')" class="ui huge grey button">
+              -
             </div>
           </div>
           <div class="row">
             <div onclick="setValue('.')" class="ui huge button">.</div>
-            <div onclick="setValue('0')" class="ui huge button btnE">0</div>
+            <div onclick="setValue('0')" class="ui huge button">0</div>
             <div onclick="equal()" class="ui huge blue button">
               =
+            </div>
+            <div onclick="setOperator('+')" class="ui huge grey button">
+              +
             </div>
           </div>
         </div>
