--- a/projects.html
+++ b/projects.html
@@ -21,11 +21,15 @@
     <div class="ui raised segment">
       <div class="ui container">
         <nav>
-          <div class="navLogo">matt's<span class="navLogoSpan">Blog</span></div>
+          <div class="navLogo">
+            <a href="index.html">
+              foundation<span class="navLogoSpan">Blog</span>
+            </a>
+          </div>
           <div class="navLinks">
             <ul>
               <li><a href="index.html">home</a></li>
-              <li>sprints</li>
+              <li><a href="sprints.html">sprints</a></li>
               <li><a href="projects.html">projects</a></li>
             </ul>
           </div>
