--- a/sprints.html
+++ b/sprints.html
@@ -15,11 +15,11 @@
       type="text/css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="home.css" />
     <link href="themes/prism.css" rel="stylesheet" />
     <script src="themes/prism.js"></script>
     <title>Matthew's Blog</title>
   </head>
+
   <body>
     <div class="ui raised segment">
       <div class="ui container">
@@ -39,37 +39,16 @@
         </nav>
       </div>
     </div>
+
     <div class="ui container">
-      <header>
-        <h1>Welcome to my Foundation's Blog</h1>
-        <div class="headerDescription">
-          Hi there! I'm Matthew Philip Uy, an aspiring individual who is willing
-          to push limits to become a full fledge web developer. This blog would
-          serve as my starter website which includes information and practices
-          that I learned during my bootcamp. Below are some of the activities
-          I've done in this bootcamp. Feel free to read them!
-        </div>
-      </header>
-
-      <section>
-        <a href="sprints.html">
-          <div class="linkContainer">
-            <div class="linkContent">
-              Sprints
-            </div>
-          </div>
-        </a>
-      </section>
-
-      <section>
-        <a href="projects.html">
-          <div class="linkContainer">
-            <div class="linkContent">
-              Projects
-            </div>
-          </div>
-        </a>
-      </section>
+      <div>
+        <pre>
+                <code class="language-javascript">for(var i = 0; i < 10; i++){
+                    if(i === 8) {
+                        console.log(i) 
+                    }
+                }</code></pre>
+      </div>
     </div>
   </body>
 </html>
