--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="stylesheet" href="themes/fontawesome.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="home.css" />
     <link href="themes/prism.css" rel="stylesheet" />
     <script src="themes/prism.js"></script>
+    <script defer src="themes/fontawesome.min.js"></script>
     <title>Matthew's Blog</title>
   </head>
   <body>
@@ -52,16 +54,25 @@
       </header>
 
       <section>
+        <h1>Sprints</h1>
         <a href="sprints.html">
           <div class="linkContainer">
             <div class="linkContent">
-              Sprints
+              <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-js-square"></i>
             </div>
           </div>
         </a>
+        <div class="linkDetail">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam
+          doloribus dolorem accusantium corporis libero modi minima fugiat
+          deserunt quia recusandae, placeat delectus? Laudantium magnam eum
+          magni, hic nesciunt molestias?
+        </div>
       </section>
 
       <section>
+        <h1>Projects</h1>
         <a href="projects.html">
           <div class="linkContainer">
             <div class="linkContent">
@@ -69,6 +80,12 @@
             </div>
           </div>
         </a>
+        <div class="linkDetail">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero unde
+          odio veniam autem optio explicabo sint eveniet. Tenetur quibusdam
+          incidunt soluta dignissimos doloribus sapiente. Perspiciatis ea
+          asperiores vel consectetur voluptatibus?
+        </div>
       </section>
     </div>
   </body>
