added template for sprints

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     />
     <link
       rel="stylesheet"
-      href="themes/semantic.min.css"
+      href="styles/themes/semantic.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="themes/fontawesome.min.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="home.css" />
-    <link href="themes/prism.css" rel="stylesheet" />
-    <script src="themes/prism.js"></script>
-    <script defer src="themes/fontawesome.min.js"></script>
+    <link rel="stylesheet" href="styles/themes/fontawesome.min.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/home.css" />
+    <link href="styles/themes/prism.css" rel="stylesheet" />
+    <script src="js/prism.js"></script>
+    <script defer src="js/fontawesome.min.js"></script>
     <title>Matthew's Blog</title>
   </head>
   <body>
@@ -48,8 +48,11 @@
           Hi there! I'm Matthew Philip Uy, an aspiring individual who is willing
           to push limits to become a full fledge web developer. This blog would
           serve as my starter website which includes information and practices
-          that I learned during my bootcamp. Below are some of the activities
-          I've done in this bootcamp. Feel free to read them!
+          that I learned during my bootcamp.
+        </div>
+        <div class="headerDescription">
+          Below are some of the activities I've done in this bootcamp. Feel free
+          to read them!
         </div>
       </header>
 
@@ -58,16 +61,18 @@
         <a href="sprints.html">
           <div class="linkContainer">
             <div class="linkContent">
-              <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i>
-              <i class="fab fa-js-square"></i>
+              <img src="images/Sprints.jpg" height="150px" width="300px" />
             </div>
           </div>
         </a>
         <div class="linkDetail">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure aperiam
-          doloribus dolorem accusantium corporis libero modi minima fugiat
-          deserunt quia recusandae, placeat delectus? Laudantium magnam eum
-          magni, hic nesciunt molestias?
+          <h4>Sprints have 2 parts:</h4>
+          <div>
+            Cultural deal with ...
+          </div>
+          <div>
+            Technical deal with ...
+          </div>
         </div>
       </section>
 
@@ -81,12 +86,15 @@
           </div>
         </a>
         <div class="linkDetail">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero unde
-          odio veniam autem optio explicabo sint eveniet. Tenetur quibusdam
-          incidunt soluta dignissimos doloribus sapiente. Perspiciatis ea
-          asperiores vel consectetur voluptatibus?
+          A collection of web applications from bootcamp challenges such as
+          calculators and more.
         </div>
       </section>
+    </div>
+    <div class="ui raised segment footerContainer">
+      <div class="footerContent">
+        <h3>&copy Copyright Matt Uy</h3>
+      </div>
     </div>
   </body>
 </html>
