--- a/projects.html
+++ b/projects.html
@@ -10,11 +10,16 @@
     />
     <link
       rel="stylesheet"
-      href="themes/semantic.min.css"
+      href="styles/themes/semantic.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/themes/fontawesome.min.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/projects.css" />
+    <link href="styles/themes/prism.css" rel="stylesheet" />
+    <script src="js/prism.js"></script>
+    <script defer src="js/fontawesome.min.js"></script>
     <title>Projects</title>
   </head>
   <body>
@@ -36,23 +41,10 @@
         </nav>
       </div>
     </div>
-    <div class="ui container">
-      <section>
-        <a href="Calc/calc.html">
-          <h1>
-            My Calculator
-          </h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-            modi, dolore eum ducimus repellat voluptatibus, dolor exercitationem
-            culpa repellendus recusandae mollitia unde omnis atque doloremque
-            nesciunt officia consequuntur fuga sequi.
-          </p>
-        </a>
-      </section>
-      <section>
+    <section>
+      <a href="Calc/calc.html">
         <h1>
-          2nd Project
+          My Calculator
         </h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
@@ -60,23 +52,35 @@
           repellendus recusandae mollitia unde omnis atque doloremque nesciunt
           officia consequuntur fuga sequi.
         </p>
-      </section>
-      <section>
-        <h1>
-          3rd Project
-        </h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
-          dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
-          repellendus recusandae mollitia unde omnis atque doloremque nesciunt
-          officia consequuntur fuga sequi.
-        </p>
-      </section>
-    </div>
-    <footer>
-      <div>
-        Copyright Matthew Uy
+      </a>
+    </section>
+    <section>
+      <h1>
+        2nd Project
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
+        dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
+        repellendus recusandae mollitia unde omnis atque doloremque nesciunt
+        officia consequuntur fuga sequi.
+      </p>
+    </section>
+    <section>
+      <h1>
+        3rd Project
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore modi,
+        dolore eum ducimus repellat voluptatibus, dolor exercitationem culpa
+        repellendus recusandae mollitia unde omnis atque doloremque nesciunt
+        officia consequuntur fuga sequi.
+      </p>
+    </section>
+
+    <div class="ui raised segment footerContainer">
+      <div class="footerContent">
+        <h3>Copyright Matt Uy</h3>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
