--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -8,7 +8,11 @@
       href="https://fonts.googleapis.com/css?family=Hind|Martel+Sans|Noto+Sans:700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="../themes/semantic.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../styles/themes/semantic.min.css"
+    />
     <link rel="stylesheet" href="calc.css" />
 
     <title>Calculator</title>
