--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -24,7 +24,6 @@
           <div class="history">
             <span id="history"></span><span id="operator"></span>
           </div>
-
           <div id="display" class="display">0</div>
         </div>
         <div class="ui grid btnContainer">
@@ -33,7 +32,7 @@
               +/-
             </div>
             <div onclick="c()" class="ui huge grey button">C</div>
-            <div onclick="ce()" class="ui huge grey button">CE</div>
+            <div onclick="ce()" class="ui huge grey button">AC</div>
             <a href="../index.html">
               <div class="ui huge red button">
                 OFF
