--- a/projects.html
+++ b/projects.html
@@ -32,11 +32,9 @@
             </a>
           </div>
           <div class="navLinks">
-            <ul>
-              <li><a href="index.html">home</a></li>
-              <li><a href="sprints.html">sprints</a></li>
-              <li><a href="projects.html">projects</a></li>
-            </ul>
+            <div class="navItem"><a href="index.html">home</a></div>
+            <div class="navItem"><a href="sprints.html">sprints</a></div>
+            <div class="navItem"><a href="projects.html">projects</a></div>
           </div>
         </nav>
       </div>
@@ -79,7 +77,7 @@
 
     <div class="ui raised segment footerContainer">
       <div class="footerContent">
-        <h3>Copyright Matt Uy</h3>
+        <h3>&copy Copyright Matt Uy</h3>
       </div>
     </div>
   </body>
