--- a/sprints/sprint4cultural.html
+++ b/sprints/sprint4cultural.html
@@ -33,11 +33,9 @@
             </a>
           </div>
           <div class="navLinks">
-            <ul>
-              <li><a href="../index.html">home</a></li>
-              <li><a href="../sprints.html">sprints</a></li>
-              <li><a href="../projects.html">projects</a></li>
-            </ul>
+            <div class="navItem"><a href="../index.html">home</a></div>
+            <div class="navItem"><a href="../sprints.html">sprints</a></div>
+            <div class="navItem"><a href="../projects.html">projects</a></div>
           </div>
         </nav>
       </div>
