--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
       </div>
     </div>
     <section>
+      <!-- TODO change css layout -->
       <a href="Calc/calc.html">
         <h1>
           My Calculator
